# brain_project

./: .gitignore  AGENTS.md  README.md
cpp_ext/: CMakeLists.txt  build_ext.sh  memory_ext.cpp  setup.py
db/: init_db.py  memory.db
python/core/: adaptive_augmenter.py  adaptive_augmenter_v2.py  adaptive_augmenter_v3.py  attention_extractor.py  attention_extractor_v2.py  balanced_sampler.py  data_augmentation.py  flexible_model.py  memory_interface_faiss.py  memory_interface_faiss_multi.py  memory_interface_faiss_multi_fast.py  memory_interface_faiss_multi_v2.py  memory_supervisor.py  memory_supervisor_v2.py  memory_supervisor_v3.py  streaming_trainer.py  streaming_trainer_fast.py  streaming_trainer_v2.py
python/experiments/: compare_biomem_vs_baseline.py  runner_v1_7.py  runner_v1_9_streaming.py  runner_v1_9_streaming_monitor.py  runner_v1_9_streaming_monitor_fast.py  runner_v1_9_streaming_vs_baseline.py  runner_v2_0_1_hyper_attentive.py  runner_v2_0_2_hyper_attentive.py  runner_v2_0_2_interactive.py  runner_v2_0_3_baseline_interactive.py  runner_v2_0_3_interactive.py
scripts/: raphsys-brain_project-8a5edab282632443.txt  suivi-brain_project-09012026-16H50.md
src/brain_project/train/: bench_m3.py  eval_m1_on_folder.py  eval_m1_perceptual.py  eval_m3.py  eval_m3_slots.py  train_m1.py  train_m3.py  train_probe.py  utils.py  visualize_m1.py  visualize_m1_v1v2.py  visualize_m1_v2_compare.py  visualize_m2_cocircularity.py  visualize_m2_endstopping.py  visualize_m2_s2.py  visualize_m3.py  visualize_m3_slots.py
src/brain_project/utils/: metrics_m1.py  visualize.py
(+22 files in other folders)
